<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="user">Email</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="register">¿Aun no tiene usuario?, Registrate</string>
    <string name="name">Nombre Completo</string>
    <string name="cpass">Confirmar Contraseña</string>
    <string name="btnR">Registrate</string>
    <string name="btnL">¿Ya tienes cuenta?, Inicia sesion</string>
    <string name="lbldash">Panel de administracion</string>
    <string name="btnUser">Gestion de Clientes</string>
    <string name="btnProd">Gestion de Productos</string>
</resources>