<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HomeAdmin"
    android:background="@color/material_dynamic_primary20"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1"
        app:cardCornerRadius="50dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbldash"
            android:textSize="20dp"
            android:textStyle="bold">
        </TextView>

        <Button
            android:id="@+id/clientes"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:backgroundTint="#00308F"
            android:layout_height="wrap_content"
            android:text="@string/btnUser">
        </Button>

        <Button
            android:id="@+id/productos"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:backgroundTint="#00308F"
            android:layout_height="wrap_content"
            android:text="@string/btnProd"
            >

        </Button>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</LinearLayout>