<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/shopping_app"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="25dp"
        app:cardCornerRadius="10dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/labelUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/user"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                />

            <TextView
                android:id="@+id/labelPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/pass"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#00308F"
        android:text="@string/login"
        android:fontFamily="sans-serif-smallcaps"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/register"
        android:textColor="#857F7F"
        android:textStyle="bold" />

</LinearLayout>